--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,16 @@
 server {
-    listen 80;  # Nginx 监听 80 端口
-    server_name 119.23.74.93;  # 您的服务器 IP
+    listen 80;
+    server_name 119.23.74.93;  # 你的服务器IP
 
     location / {
-        proxy_pass http://app:3000;  # 将请求转发到 Node.js 应用
+        proxy_pass http://app:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
